--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {  
-  "homepage":"https://Mannan88/github.io/pokedex.git",
+  "homepage":"https://Mannan88.github.io/pokedex.git",
   "name": "pokedex",
   "version": "0.1.0",
   "private": true,
